change jur && change contract page

--- a/HG/HG/template/base.html
+++ b/HG/HG/template/base.html
@@ -35,6 +35,7 @@
 							-->
 							<li><a href="/querycontracts">全部合同查询</a></li>
                             <li><a href="/lastcheck">合同总数审核</a></li>
+							<li><a href="/changecon">合同修改</a></li>
                         </ul>
                     </li>
                     <li class="dropdown" id="accountmenu" style="padding-top: 30px;">
