--- a/HG/HG/template/altercontract.html
+++ b/HG/HG/template/altercontract.html
@@ -110,9 +110,12 @@ float:left;
 				<br /><br />
 			 <label class="control-label">产品</label>
 			<select name="product_id">
-			<option value='{{contract.number.name}}'>{{contract.thisproduct.name}}</option>
             {%for item in products%}
+            {%ifequal item.id contract.thisproduct.id%}
+            <option value='{{item.id}}' selected>{{item.name}}</option>
+            {%else%}
             <option value='{{item.id}}'>{{item.name}}</option>
+            {%endifequal%}
             {%endfor%}
             </select>
             <br /><br />
@@ -125,9 +128,12 @@ float:left;
             <br /><br />
             <label class="control-label">理财顾问</label>
             <select name="manager_id">
-		    <option value='{{contract.number.name}}'>{{contract.thismanager.name}}</option>
             {%for item in managers%}
+            {%ifequal item.id contract.thismanager.id%}
+            <option value='{{item.id}}' selected>{{item.name}}</option>
+            {%else%}
             <option value='{{item.id}}'>{{item.name}}</option>
+            {%endifequal%}
             {%endfor%}
             </select>
             <br /><br />
