--- a/HG/HG/template/changecon.html
+++ b/HG/HG/template/changecon.html
@@ -99,7 +99,9 @@ text-align:center;
 			<td>{{contract.enddate}}</td>
             <td>{{contract.thismanager.name}}</td>
 			<td>
+            {%ifequal contract.status 1%}
 			<input type="button" value="修改"  style="width:40px; height:20px; margin:0px;padding:0px;" onclick="alter({{contract.id}})">
+            {%endifequal%}
             </td>
         </tr>
         {%endfor%}
