--- a/HG/HG/template/showcontract.html
+++ b/HG/HG/template/showcontract.html
@@ -76,7 +76,7 @@ history.back(-1);
                 </tr>
                 <tr>
                     <th>理财顾问</th>
-                    <td>{{contract.thismanager.name}}</td>
+                    <td><a href="/manager/{{contract.thismanager.id}}/">{{contract.thismanager.name}}</a></td>
                 </tr>
                 <tr>
                     <th>手续费</th>
