--- a/HG/HG/template/manager_contract.html
+++ b/HG/HG/template/manager_contract.html
@@ -3,27 +3,9 @@
 {% block center %}
 <link href="static/css/bootstrap.css" rel="stylesheet" type="text/css" />
 <script>
-function GoTo(var1){
- var PageNo=document.getElementById("PageNo").value;
-if (PageNo <= var1){
- var url = "";
- url = 'querycontracts?page='+PageNo;
- window.open(url, '_self');
+function back(){
+history.back(-1);
 }
-else{
- window.alert('请输入正确页码');
-}
-}
-
-function check(var1){
- var id = var1;
- var url = "";
- url = 'checkcontract?contractid='+id;
- window.open(url,'_self');
-
-}
-
-
 </script>
 <style>
 .input-append{
@@ -36,9 +18,8 @@ text-align:center;
 }
 </style>
 
-<body>
-<h2>合同审核</h2>
-
+<body onload="count({{contract_size}})">
+<h2>该经理签的合同</h2>
     <div class="container">
    
       <table class="table">
@@ -54,12 +35,12 @@ text-align:center;
             <th>签约日</th>
             <th>到期日</th>
             <th>理财顾问</th>
-			<th>操作</th>
           </tr>
         </thead>
         <tbody>
+
+
         {%for contract in contracts%}
-         {% ifequal  contract.status 1 %}
         <tr>
             <td><a href="/contract/{{contract.id}}">{{contract.number}}</a></td>
             <td>{{contract.client_name}}</td>
@@ -70,29 +51,12 @@ text-align:center;
 			<td>{{contract.money}}</td>
 			<td>{{contract.startdate}}</td>
 			<td>{{contract.enddate}}</td>
-            <td><a href="/manager/{{contract.thismanager.id}}/">{{contract.thismanager.name}}</a></td>
-			<td>
-
-			<input type="button" value="审核" style="width:40px; height:20px; margin:0px;padding:0px;" onclick="check({{contract.id}})">
-			
-			</td>
-			
+            <td>{{contract.thismanager.name}}</td>
         </tr>
-		{% endifequal %}
         {%endfor%}
         </tbody>
       </table>
-	  <div class='fenye' >
-	  {%ifnotequal curpage 1 %}
-		<a href="/checkcontracts?page={{curpage}}&&pagetype=pageup">上一页</a>
-		{% endifnotequal %}
-		第{{curpage}}/{{allpage}}
-		{% ifnotequal curpage allpage %}
-		<a href="/checkcontracts?page={{curpage}}&&pagetype=pagedown">下一页</a>
-		{% endifnotequal %}
-		<p>跳转到第<input id='PageNo' style="width:30px;"> 页 <input type='button' value='GO' onclick="GoTo({{allpage}})"></p>
-		
-		</div>
+       <input type="submit" value="返回" class="btn btn-primary" onclick="back()">
     </div>
 
 </body>
