manager contract link in construct

--- a/HG/HG/template/checkcontracts.html
+++ b/HG/HG/template/checkcontracts.html
@@ -70,7 +70,7 @@ text-align:center;
 			<td>{{contract.money}}</td>
 			<td>{{contract.startdate}}</td>
 			<td>{{contract.enddate}}</td>
-            <td><a href="/manager/{{contract.thismanager.id}}/">{{contract.thismanager.name}}</a></td>
+            <td>{{contract.thismanager.name}}</td>
 			<td>
 
 			<input type="button" value="审核" style="width:40px; height:20px; margin:0px;padding:0px;" onclick="check({{contract.id}})">
