--- a/HG/HG/template/querycontracts.html
+++ b/HG/HG/template/querycontracts.html
@@ -72,7 +72,9 @@ text-align:center;
 </form>
 </div>
     <div class="container">
-   
+      <form action="/outcontracts/" method="post" target="_blank">  
+      <input type="submit" value="导出全部合同excel">
+      </form>
       <table class="table">
         <thead>
           <tr>
