--- a/HG/HG/template/queryrepayitems.html
+++ b/HG/HG/template/queryrepayitems.html
@@ -114,11 +114,13 @@ function setcontract_id()
 {%endifequal%}
 <div class="input-append" >
     <form action="/queryrepayitems/{{type_id}}" method="get">
+    {%ifnotequal type_id "2"%}    
     起始日期
     <input id="fromdate" name="fromdate" value={{fromdate}} onClick="WdatePicker()">
     终止日期
     <input id="todate" name="todate" value={{todate}} onClick="WdatePicker()">
-    <input  id="input_id" type="text" name="contract_id" placeholder="合同编号">
+    {%endifnotequal%}
+    <input  id="input_id" type="text" name="contract_id" placeholder="合同编号" value={{number}}>
     <input type="submit" value="Search">
     </form>
     {%ifequal type_id "3"%}
