--- a/HG/HG/template/renewalRate.html
+++ b/HG/HG/template/renewalRate.html
@@ -109,6 +109,7 @@ function getmanagerlist(party_id){
 </script>
 <h5>经理续签率</h5>
 <h5><a href="/managerYear">经理年化进账统计</a></h5>
+<h5><a href="/managerDeduct2">经理提成表</a></h5>
 <div class="input-append" >
     <form action="/renewalRate" method="get">
     起始日期
