--- a/HG/HG/template/yearintocnt.html
+++ b/HG/HG/template/yearintocnt.html
@@ -156,7 +156,9 @@ function datechange(){
 </script>
 
 
-<h2>年化进账统计</h2>
+<h5>年化进账统计</h5>
+<h5><a href="/managerDeduct">经理提成统计</a></h5>
+<h5><a href="/performanceDetail">业绩明细表</a></h5>
 <div class="input-append" >
     起始日期
     <input id="fromdate" value={{fromdate}} onblur="datechange()" name="fromdate" onClick="WdatePicker()">
