--- a/HG/HG/template/performanceDetail.html
+++ b/HG/HG/template/performanceDetail.html
@@ -211,6 +211,7 @@ function getmanagerlist(party_id){
             <th>续单数</th>
 	        <th>续单金额</th>
 	        <th>续单比例</th>
+            <th>年化续单金额</th>
             <th>应兑数</th>
 	        <th>应兑金额</th>
           </tr>
@@ -233,6 +234,7 @@ function getmanagerlist(party_id){
             <td>{{item.1.7}}</td>
             <td>{{item.1.8}}</td>  
             <td>{{item.1.9}}</td> 
+            <td>{{item.1.10}}</td> 
         </tr>
         {%endfor%}
         </tbody>
