--- a/HG/HG/template/altercontract.html
+++ b/HG/HG/template/altercontract.html
@@ -1,7 +1,7 @@
 ﻿{% extends 'base.html' %}
 
 {% block center %}
-<script language="JavaScript" type="text/javascript" src="http://www.my97.net/dp/My97DatePicker/WdatePicker.js"></script>
+<script language="JavaScript" type="text/javascript" src="/static/js/My97DatePicker/WdatePicker.js"></script>
 <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
 <script>
 function back(){
