--- a/HG/HG/template/dateCashCnt.html
+++ b/HG/HG/template/dateCashCnt.html
@@ -10,7 +10,7 @@ margin-left:auto;
 margin-right:auto;
 }
 </style>
-<script language="JavaScript" type="text/javascript" src="http://www.my97.net/dp/My97DatePicker/WdatePicker.js"></script>
+<script language="JavaScript" type="text/javascript" src="/static/js/My97DatePicker/WdatePicker.js"></script>
 
 <h5>日期兑付</h5>
 <h5><a href="/managercashCnt">人员兑付</a></h5>
