--- a/HG/HG/template/newcontract.html
+++ b/HG/HG/template/newcontract.html
@@ -2,7 +2,7 @@
 
 {% block center %}
 {% load bootstrap_toolkit %}
-<script language="JavaScript" type="text/javascript" src="http://www.my97.net/dp/My97DatePicker/WdatePicker.js"></script>
+<script language="JavaScript" type="text/javascript" src="/static/js/My97DatePicker/WdatePicker.js"></script>
 <div class="right">
     <div class="new">
         <h1>欢迎使用理财管理查询系统</h1>
