--- a/HG/HG/template/managercashDetail.html
+++ b/HG/HG/template/managercashDetail.html
@@ -10,7 +10,7 @@ margin-left:auto;
 margin-right:auto;
 }
 </style>
-<script language="JavaScript" type="text/javascript" src="http://www.my97.net/dp/My97DatePicker/WdatePicker.js"></script>
+<script language="JavaScript" type="text/javascript" src="/static/js/My97DatePicker/WdatePicker.js"></script>
 
 <h2>{{fromdate}}-{{todate}}<br />
     兑付详情</h2>
