--- a/HG/HG/template/performanceDetail.html
+++ b/HG/HG/template/performanceDetail.html
@@ -8,7 +8,7 @@ margin-left:auto;
 margin-right:auto;
 }
 </style>
-<script language="JavaScript" type="text/javascript" src="http://www.my97.net/dp/My97DatePicker/WdatePicker.js"></script>
+<script language="JavaScript" type="text/javascript" src="/static/js/My97DatePicker/WdatePicker.js"></script>
 <script>
 String.prototype.Trim = function() 
 { 
