--- a/HG/HG/template/singleguestcnt.html
+++ b/HG/HG/template/singleguestcnt.html
@@ -10,7 +10,7 @@ margin-left:auto;
 margin-right:auto;
 }
 </style>
-<script language="JavaScript" type="text/javascript" src="http://www.my97.net/dp/My97DatePicker/WdatePicker.js"></script>
+<script language="JavaScript" type="text/javascript" src="/static/js/My97DatePicker/WdatePicker.js"></script>
 
 <h5>客户单笔统计</h5>
 <h5><a href="/guestCnt">客户累计统计</a></h5>
